--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <script src="C:\Users\Pavel\Documents\.VS CODE\site\test.js"></script>
-    <h1>HI! fourth commit</h1>
+    <h1>HI fourth commit</h1>
   </body>
 </html>
