--- a/files/index.html
+++ b/files/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <body>
-    <script src="C:\Users\Pavel\Documents\.VS CODE\site\test.js"></script>
-    <h1>HI fourth commit</h1>
+    <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+  <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+    data-link="https://photos.app.goo.gl/S8ayqHz5tX6Yay9u5"
+    data-title="Saved streams"
+    data-description="New item · Album by Gardych">
+    <object data="https://lh3.googleusercontent.com/pw/AIL4fc9nU3TYPm7E3IinB84lzPVORX2COfZnUdWF8JCoMYpILOR-DyvxJNLCQOnqUHm374u_ZzR7I2U4yFFBXDIKmkYgJNg1TSWTqKtltFORkWEd62oRIm8=w1920-h1080"></object>
+  </div>
   </body>
 </html>
