--- a/files/index.html
+++ b/files/index.html
@@ -5,12 +5,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-  <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
-    data-link="https://photos.app.goo.gl/S8ayqHz5tX6Yay9u5"
-    data-title="Saved streams"
-    data-description="New item · Album by Gardych">
-    <object data="https://lh3.googleusercontent.com/pw/AIL4fc9nU3TYPm7E3IinB84lzPVORX2COfZnUdWF8JCoMYpILOR-DyvxJNLCQOnqUHm374u_ZzR7I2U4yFFBXDIKmkYgJNg1TSWTqKtltFORkWEd62oRIm8=w1920-h1080"></object>
-  </div>
+    <div class="html5-video-container" data-layer="0">
+      <video tabindex="-1"  class="video-stream html5-main-video" webkit-playsinline="" playsinline=""  style="width: 966px; height: 543px; left: 0px; top: 0px;"   src="blob:https://youtube.googleapis.com/0aa6ad0e-9c2a-409a-8e81-b0e2b3e0084c">
+      </video>
+    </div>
   </body>
 </html>
